alt nome e backgrounde repeat

--- a/ex022/fundo002.html
+++ b/ex022/fundo002.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Repetições de Background</title>
+    <title>Imagem no Fundo do Site</title>
     <style>
         body {
-            background-image: url('imagens/mascote.png');
-            background-size: 100px 100px;
-            background-repeat: repeat;
+            background-image: url(imagens/mascote.png);
+            background-size: 100px;
         }
     </style>
 </head>
